сделал модалку с КП

--- a/src/views/blocks/side-panel.j2
+++ b/src/views/blocks/side-panel.j2
@@ -15,7 +15,7 @@
     </div>
     <span class="side-panel__button-text">Получить консультацию</span>
   </button>
-  <button class="side-panel__button side-panel__button--get-offer" id="side-panel-offer" type="button">
+  <button class="side-panel__button side-panel__button--get-offer" id="side-panel-offer" type="button" data-type="open-offer-modal">
     <div class="side-panel__icon-wrapper">
       <svg class="side-panel__button-icon" width="45" height="45" viewBox="0 0 45 45">
         <use xlink:href="img/sprite.svg#side-panel-sale"></use>
