--- a/src/views/pages/service-template.j2
+++ b/src/views/pages/service-template.j2
@@ -630,6 +630,7 @@
 
 {% block modal %}
   {% include "./blocks/modal-image.j2" %}
+  {% include "./blocks/modal-offer.j2" %}
 {% endblock %}
 
 {% block js %}
