--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -189,3 +189,17 @@
     }
   }
 }
+
+.modal--offer {
+  & .modal__wrapper {
+    width: 100%;
+
+    @media (min-width: $tablet-width) {
+      max-width: 80%;
+      padding: 48px 45px 50px;
+    }
+    @media (min-width: $desktop-width) {
+      max-width: 1203px;
+    }
+  }
+}
