--- a/src/views/blocks/advantages.j2
+++ b/src/views/blocks/advantages.j2
@@ -43,7 +43,7 @@
           </p>
         </li>
       </ul>
-      <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
+      <button class="section__button button button--blue" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
     </div>
   </div>
 </section>
