--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -22,6 +22,9 @@
   {% include "./blocks/side-panel.j2" %}
   {% include "./blocks/modal.j2" %}
   {% include "./blocks/modal-order.j2" %}
+  {% include "./blocks/modal-offer.j2" %}
+  {% include "./blocks/modal-consultation.j2" %}
+  {% include "./blocks/modal-pricelist.j2" %}
   {% block modal %}{% endblock %}
 
   <script src="./js/burger.min.js"></script>
