--- a/src/views/pages/templates.j2
+++ b/src/views/pages/templates.j2
@@ -23,7 +23,7 @@
                 <div class="section__card-content">
                   <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
                   <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
-                  <button class="section__card-button button button--blue section__card-button--hidden" type="button">Запросить прайс-лист</button>
+                  <button class="section__card-button button button--blue section__card-button--hidden" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
                 </div>
               </div>
             </li>
@@ -32,7 +32,7 @@
                 <div class="section__card-content">
                   <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
                   <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
-                  <button class="section__card-button button button--blue section__card-button--hidden" type="button">Запросить прайс-лист</button>
+                  <button class="section__card-button button button--blue section__card-button--hidden" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
                 </div>
               </div>
             </li>
@@ -41,7 +41,7 @@
                 <div class="section__card-content">
                   <p class="section__card-title">Двухфакторная аутентификация пользователей</p>
                   <p class="section__card-paragraph">Для входа в операционную систему Microsoft Windows и корпоративную сеть пользователю необходимо иметь USB-токен или смарт-карту JaCarta.</p>
-                  <button class="section__card-button button button--blue section__card-button--hidden" type="button">Запросить прайс-лист</button>
+                  <button class="section__card-button button button--blue section__card-button--hidden" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
                 </div>
               </div>
             </li>
@@ -191,7 +191,7 @@
               <li class="section__check-list-item">Системы защиты IT инфраструктуры</li>
               <li class="section__check-list-item">Корпоративная почта</li>
             </ul>
-            <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
+            <button class="section__button button button--blue" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
           </div>
         </div>
       </div>
@@ -308,7 +308,7 @@
               <li class="section__check-list-item">Системы защиты IT инфраструктуры</li>
               <li class="section__check-list-item">Корпоративная почта</li>
             </ul>
-            <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
+            <button class="section__button button button--blue" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
           </div>
         </div>
       </div>
@@ -375,7 +375,7 @@
               </p>
             </li>
           </ul>
-          <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
+          <button class="section__button button button--blue" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
         </div>
       </div>
     </section>
@@ -413,7 +413,7 @@
                 </p>
               </li>
             </ul>
-            <button class="section__button button button--blue" type="button">Запросить прайс-лист</button>
+            <button class="section__button button button--blue" type="button" data-type="open-pricelist-modal">Запросить прайс-лист</button>
           </div>
         </div>
       </div>
