--- a/src/views/blocks/side-panel.j2
+++ b/src/views/blocks/side-panel.j2
@@ -1,34 +1,34 @@
 <aside class="side-panel">
-  <button class="side-panel__button side-panel__button--req-price" id="side-panel-price" type="button">
-    <div class="side-panel__icon-wrapper">
+  <button class="side-panel__button side-panel__button--req-price" id="side-panel-price" type="button" data-type="open-pricelist-modal">
+    <span class="side-panel__icon-wrapper">
       <svg class="side-panel__button-icon" width="34" height="34" viewBox="0 0 34 34">
         <use xlink:href="img/sprite.svg#side-panel-calculator"></use>
       </svg>
-    </div>
+    </span>
     <span class="side-panel__button-text">Запросить прайс-лист</span>
   </button>
-  <button class="side-panel__button side-panel__button--get-cons" id="side-panel-cons" type="button">
-    <div class="side-panel__icon-wrapper">
+  <button class="side-panel__button side-panel__button--get-cons" id="side-panel-cons" type="button" data-type="open-cons-modal">
+    <span class="side-panel__icon-wrapper">
       <svg class="side-panel__button-icon" width="40" height="37" viewBox="0 0 40 37">
         <use xlink:href="img/sprite.svg#side-panel-chat"></use>
       </svg>
-    </div>
+    </span>
     <span class="side-panel__button-text">Получить консультацию</span>
   </button>
   <button class="side-panel__button side-panel__button--get-offer" id="side-panel-offer" type="button" data-type="open-offer-modal">
-    <div class="side-panel__icon-wrapper">
+    <span class="side-panel__icon-wrapper">
       <svg class="side-panel__button-icon" width="45" height="45" viewBox="0 0 45 45">
         <use xlink:href="img/sprite.svg#side-panel-sale"></use>
       </svg>
-    </div>
+    </span>
     <span class="side-panel__button-text">Коммерческое предложение</span>
   </button>
   <button class="side-panel__button side-panel__button--go-to-top" id="side-panel-to-top" type="button">
-    <div class="side-panel__icon-wrapper">
+    <span class="side-panel__icon-wrapper">
       <svg class="side-panel__button-icon" width="15" height="9" viewBox="0 0 15 9">
         <use xlink:href="img/sprite.svg#side-panel-go-to-top"></use>
       </svg>
-    </div>
+    </span>
     <span class="side-panel__button-text">Наверх</span>
   </button>
 </aside>
