--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,7 +12,7 @@ $desktop-width: 1121px + 2 * $paddings-desktop;
 $desktop-swiper-width: 1121px + 2 * $paddings-desktop + 150px;
 $max-mobile-width: $tablet-width - 1px;
 $max-tablet-width: $desktop-width - 1px;
-$side-panel-available: 1520px;
+$side-panel-available: $desktop-width;
 
 // Colors
 $primary-color: #453fa9;
