--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -27,6 +27,8 @@
   {% include "./blocks/modal-pricelist.j2" %}
   {% block modal %}{% endblock %}
 
+
+  <script src="./js/global.min.js"></script>
   <script src="./js/burger.min.js"></script>
   <script src="./js/pristine.min.js"></script>
   <script src="./js/choices.min.js"></script>
