--- a/src/scss/blocks/service-header.scss
+++ b/src/scss/blocks/service-header.scss
@@ -37,5 +37,17 @@
 
   @media (max-width: $max-mobile-width) {
     flex-direction: column;
+    gap: 10px;
+  }
+}
+
+.service-header__column {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    width: fit-content;
   }
 }
