--- a/src/views/blocks/admin-cons.j2
+++ b/src/views/blocks/admin-cons.j2
@@ -37,12 +37,15 @@
               </label>
             </div>
           </div>
-          <button class="button form__submit-button" type="submit">Получить консультацию</button>
-          <label class="section__form-checkbox form__label form__label--checkbox">
-            <input class="form__checkbox visually-hidden" type="checkbox" name="admin-cons-politics" id="admin-cons-politics" checked>
-            <span class="form__mark"></span>
-            <span class="section__form-checkbox-text form__checkbox-label-text">Согласен с <a href="#!">Политикой конфиденциальности сайта</a></span>
-          </label>
+          <div class="form__column">
+            <button class="button form__submit-button" type="submit">Получить консультацию</button>
+            <label class="section__form-checkbox form__label form__label--checkbox">
+              <input class="form__checkbox visually-hidden" type="checkbox" name="admin-cons-politics" id="admin-cons-politics" checked>
+              <span class="form__mark"></span>
+              <span class="section__form-checkbox-text form__checkbox-label-text">Согласен с <a href="#!">Политикой конфиденциальности сайта</a></span>
+            </label>
+          </div>
+
           <div class="form__messengers">
             <p class="form__messengers-write-us">или напишите в мессенджер</p>
             <a class="messenger messenger--telegram" href="#!">
