--- a/src/views/blocks/download-cp.j2
+++ b/src/views/blocks/download-cp.j2
@@ -24,12 +24,14 @@
             <span class="section__form-label-text form__label-text form__label-text--black">Номер телефона для связи</span>
             <input class="form__field" type="tel" id="dwnld-cp-phone" name="dwnld-cp-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
           </label>
-          <button class="button form__submit-button" type="submit">Получить КП и прайс</button>
-          <label class="section__form-checkbox form__label form__label--checkbox">
-            <input class="form__checkbox visually-hidden" type="checkbox" name="dwnld-cp-politics" id="dwnld-cp-politics" checked>
-            <span class="form__mark"></span>
-            <span class="section__form-checkbox-text form__checkbox-label-text">Согласен с <a href="#!">Политикой конфиденциальности сайта</a></span>
-          </label>
+          <div class="form__column">
+            <button class="button form__submit-button" type="submit">Получить КП и прайс</button>
+            <label class="section__form-checkbox form__label form__label--checkbox">
+              <input class="form__checkbox visually-hidden" type="checkbox" name="dwnld-cp-politics" id="dwnld-cp-politics" checked>
+              <span class="form__mark"></span>
+              <span class="section__form-checkbox-text form__checkbox-label-text">Согласен с <a href="#!">Политикой конфиденциальности сайта</a></span>
+            </label>
+          </div>
         </form>
       </div>
     </div>
