--- a/src/views/blocks/modal-pricelist.j2
+++ b/src/views/blocks/modal-pricelist.j2
@@ -35,12 +35,14 @@
               </label>
             </div>
           </div>
-          <button class="button form__submit-button" type="submit">Получить прайслист</button>
-          <label class="section__form-checkbox form__label form__label--checkbox">
-            <input class="form__checkbox visually-hidden" type="checkbox" name="modal-pricelist-politics" id="modal-pricelist-politics" checked>
-            <span class="form__mark"></span>
-            <span class="section__form-checkbox-text form__checkbox-label-text">Согласен с <a href="#!">Политикой конфиденциальности сайта</a></span>
-          </label>
+          <div class="form__column">
+            <button class="button form__submit-button" type="submit">Получить прайслист</button>
+            <label class="section__form-checkbox form__label form__label--checkbox">
+              <input class="form__checkbox visually-hidden" type="checkbox" name="modal-pricelist-politics" id="modal-pricelist-politics" checked>
+              <span class="form__mark"></span>
+              <span class="section__form-checkbox-text form__checkbox-label-text">Согласен с <a href="#!">Политикой конфиденциальности сайта</a></span>
+            </label>
+          </div>
         </form>
       </div>
     </div>
