--- a/src/scss/blocks/section.scss
+++ b/src/scss/blocks/section.scss
@@ -3,7 +3,7 @@
     padding: 30px 0;
 
     @media (min-width: $desktop-width) {
-      padding: 50px 0;
+      padding: 70px 0;
     }
   }
 
@@ -225,7 +225,7 @@
     align-self: flex-end;
     max-width: calc(50% - 20px);
 
-    gap: 30px;
+    gap: 15px;
   }
 }
 
@@ -242,6 +242,10 @@
     max-width: inherit;
     height: 100%;
     max-height: 100%;
+  }
+
+  @media (max-width: $max-tablet-width) {
+    display: none;
   }
 }
 
@@ -564,8 +568,6 @@
   & .section__half {
     @media (min-width: $desktop-width) {
       max-width: 480px;
-
-      gap: 25px;
     }
   }
 
@@ -587,7 +589,7 @@
 }
 
 .section__form {
-  gap: 25px;
+  gap: 20px;
 }
 
 .section__form-label-text {
