--- a/src/scss/blocks/catalog.scss
+++ b/src/scss/blocks/catalog.scss
@@ -111,6 +111,65 @@
   gap: 11px;
 }
 
+.catalog__filters-item {
+  overflow: hidden;
+}
+
+.catalog__cards-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+
+.catalog__content-column {
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.catalog__side-filters {
+  width: 100%;
+  background-color: $white-color;
+
+  @media (min-width: $desktop-width) {
+    max-width: 362px;
+    padding: 35px;
+    box-shadow: 10px 10px 35px rgba(178, 176, 199, 0.25);
+  }
+}
+
+.catalog__form {
+  gap: 30px;
+}
+
+.catalog__form-title {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 140%;
+  text-transform: uppercase;
+  color: $blue-color;
+}
+
+.catalog__checkbox-list {
+}
+.catalog__checkbox-list--manufacturers {
+}
+
+.catalog__form-checkbox {
+  gap: 15px;
+}
+.catalog__form-checkbox-text {
+  font-size: 14px;
+  line-height: 130%;
+  color: $blue-color;
+}
+
 .catalog__cards-list {
   display: flex;
   flex-direction: column;
