--- a/src/scss/blocks/filter.scss
+++ b/src/scss/blocks/filter.scss
@@ -1,8 +1,8 @@
 .filter {
   position: relative;
 
-  display: flex;
-  align-self: flex-start;
+  display: inline-block;
+  // align-self: flex-start;
   margin: 0;
   padding: 8px 10px;
 
@@ -12,6 +12,10 @@
   color: $blue-color;
   text-transform: uppercase;
   text-decoration: none;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
 
   background-color: $white-color;
   border: 1px solid #ebebeb;
