--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -27,6 +27,13 @@ a {
   }
 }
 
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 @keyframes showing-animation {
   0% {
     opacity: 0;
