--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -26,6 +26,7 @@ $aqua-color: #2aa898;
 $blue-color: #0eadff;
 $testcolor: #fffeee;
 $par-color: #2c2c2c;
+$error-field-bg: #ffe7e7;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
