--- a/src/scss/blocks/product-card.scss
+++ b/src/scss/blocks/product-card.scss
@@ -70,25 +70,23 @@
 
 .product-card__image-wrapper {
   position: relative;
+  margin-bottom: 15px;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: -20px;
-  margin-left: -20px;
 }
 
 .product-card__image {
-  width: auto;
-  height: 238px;
-
-  object-fit: contain;
+  width: 100%;
+  max-height: 197px;
+  object-fit: cover;
 }
 
 .product-card__vendor {
   position: absolute;
   top: 0;
-  left: 20px;
+  left: 0;
 
   pointer-events: none;
 }
@@ -155,6 +153,7 @@
 .product-card__toolbar {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   gap: 30px;
 }
@@ -165,6 +164,7 @@
   display: flex;
   align-items: center;
   padding: 2px 5px;
+  gap: 10px;
 
   font-family: inherit;
   text-decoration: none;
@@ -194,19 +194,7 @@
   }
 }
 
-.product-card__toolbar-button--compare {
-  position: relative;
-
-  padding-left: 44px;
-}
-
 .product-card__toolbar-button-icon {
-  position: absolute;
-  top: 50%;
-  left: 10px;
-
-  transform: translateY(-50%);
-
   transition: fill 0.3s ease;
 
   fill: $blue-color;
