--- a/src/views/pages/servers.j2
+++ b/src/views/pages/servers.j2
@@ -272,19 +272,18 @@
               </form>
             </div>
             <div class="catalog__content-column">
-              <ol class="catalog__cards-list">
+              <ol class="catalog__cards-list catalog__cards-list--two-col-desktop">
                 <li class="catalog__cards-item">
-                  <div class="product-card" data-product-type="computers" data-vendor="rdw-computers">
+                  <div class="product-card" data-product-type="servers" data-vendor="iru">
                     <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
                     <div class="product-card__content">
                       <p class="product-card__title">iRU Office 310A3SM MT</p>
                       <p class="product-card__subtitle">Компьютер для эффективной работы</p>
                       <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-rdw.png" alt="">
-                        </span>
+                        <picture>
+                          <source type="image/webp" srcset="@img/product-card-server2.webp 1x">
+                          <img class="product-card__image" src="@img/product-card-server2.jpg" alt="" width="313" height="197">
+                        </picture>
                       </div>
                       <div class="product-card__price-row">
                         <div class="product-card__prices-wrapper">
@@ -314,11 +313,10 @@
                       <p class="product-card__title">iRU Office 310A3SM MT</p>
                       <p class="product-card__subtitle">Компьютер для эффективной работы</p>
                       <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-iru.png" alt="">
-                        </span>
+                        <picture>
+                          <source type="image/webp" srcset="@img/product-card-server.webp 1x">
+                          <img class="product-card__image" src="@img/product-card-server.jpg" alt="" width="313" height="197">
+                        </picture>
                       </div>
                       <div class="product-card__price-row">
                         <div class="product-card__prices-wrapper">
@@ -348,11 +346,10 @@
                       <p class="product-card__title">iRU Office 310A3SM MT</p>
                       <p class="product-card__subtitle">Компьютер для эффективной работы</p>
                       <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-iru.png" alt="">
-                        </span>
+                        <picture>
+                          <source type="image/webp" srcset="@img/product-card-server2.webp 1x">
+                          <img class="product-card__image" src="@img/product-card-server2.jpg" alt="" width="313" height="197">
+                        </picture>
                       </div>
                       <div class="product-card__price-row">
                         <div class="product-card__prices-wrapper">
@@ -376,17 +373,16 @@
                   </div>
                 </li>
                 <li class="catalog__cards-item">
-                  <div class="product-card" data-product-type="computers" data-vendor="iru">
+                  <div class="product-card" data-product-type="servers" data-vendor="iru">
                     <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
                     <div class="product-card__content">
                       <p class="product-card__title">iRU Office 310A3SM MT</p>
                       <p class="product-card__subtitle">Компьютер для эффективной работы</p>
                       <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-iru.png" alt="">
-                        </span>
+                        <picture>
+                          <source type="image/webp" srcset="@img/product-card-server2.webp 1x">
+                          <img class="product-card__image" src="@img/product-card-server2.jpg" alt="" width="313" height="197">
+                        </picture>
                       </div>
                       <div class="product-card__price-row">
                         <div class="product-card__prices-wrapper">
@@ -410,17 +406,16 @@
                   </div>
                 </li>
                 <li class="catalog__cards-item">
-                  <div class="product-card" data-product-type="computers" data-vendor="rdw-computers">
+                  <div class="product-card" data-product-type="servers" data-vendor="iru">
                     <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
                     <div class="product-card__content">
                       <p class="product-card__title">iRU Office 310A3SM MT</p>
                       <p class="product-card__subtitle">Компьютер для эффективной работы</p>
                       <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-rdw.png" alt="">
-                        </span>
+                        <picture>
+                          <source type="image/webp" srcset="@img/product-card-server2.webp 1x">
+                          <img class="product-card__image" src="@img/product-card-server2.jpg" alt="" width="313" height="197">
+                        </picture>
                       </div>
                       <div class="product-card__price-row">
                         <div class="product-card__prices-wrapper">
@@ -444,17 +439,16 @@
                   </div>
                 </li>
                 <li class="catalog__cards-item">
-                  <div class="product-card" data-product-type="computers" data-vendor="rdw-computers">
+                  <div class="product-card" data-product-type="servers" data-vendor="iru">
                     <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
                     <div class="product-card__content">
                       <p class="product-card__title">iRU Office 310A3SM MT</p>
                       <p class="product-card__subtitle">Компьютер для эффективной работы</p>
                       <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-rdw.png" alt="">
-                        </span>
+                        <picture>
+                          <source type="image/webp" srcset="@img/product-card-server2.webp 1x">
+                          <img class="product-card__image" src="@img/product-card-server2.jpg" alt="" width="313" height="197">
+                        </picture>
                       </div>
                       <div class="product-card__price-row">
                         <div class="product-card__prices-wrapper">
@@ -477,108 +471,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="catalog__cards-item">
-                  <div class="product-card" data-product-type="ups" data-vendor="rdw-computers">
-                    <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
-                    <div class="product-card__content">
-                      <p class="product-card__title">iRU Office 310A3SM MT</p>
-                      <p class="product-card__subtitle">Компьютер для эффективной работы</p>
-                      <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-rdw.png" alt="">
-                        </span>
-                      </div>
-                      <div class="product-card__price-row">
-                        <div class="product-card__prices-wrapper">
-                          <span class="product-card__price">582 940 ₽</span>
-                          <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
-                        </div>
-                        <a class="product-card__button order-button button" href="#!">Заказать</a>
-                      </div>
-                      <div class="product-card__toolbar">
-                        <button class="product-card__toolbar-button product-card__toolbar-button--compare">
-                          <svg class="product-card__toolbar-button-icon" width="24" height="19" viewBox="0 0 24 19">
-                            <use xlink:href="img/sprite.svg#compare-icon"></use>
-                          </svg>
-                          <span class="product-card__toolbar-button-text">Сравнить</span>
-                        </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
-                          <span class="product-card__toolbar-button-text">Конфигуратор</span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="catalog__cards-item">
-                  <div class="product-card" data-product-type="servers" data-vendor="rdw-computers">
-                    <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
-                    <div class="product-card__content">
-                      <p class="product-card__title">iRU Office 310A3SM MT</p>
-                      <p class="product-card__subtitle">Компьютер для эффективной работы</p>
-                      <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-rdw.png" alt="">
-                        </span>
-                      </div>
-                      <div class="product-card__price-row">
-                        <div class="product-card__prices-wrapper">
-                          <span class="product-card__price">582 940 ₽</span>
-                          <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
-                        </div>
-                        <a class="product-card__button order-button button" href="#!">Заказать</a>
-                      </div>
-                      <div class="product-card__toolbar">
-                        <button class="product-card__toolbar-button product-card__toolbar-button--compare">
-                          <svg class="product-card__toolbar-button-icon" width="24" height="19" viewBox="0 0 24 19">
-                            <use xlink:href="img/sprite.svg#compare-icon"></use>
-                          </svg>
-                          <span class="product-card__toolbar-button-text">Сравнить</span>
-                        </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
-                          <span class="product-card__toolbar-button-text">Конфигуратор</span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="catalog__cards-item">
-                  <div class="product-card" data-product-type="computers" data-vendor="rdw-computers">
-                    <a class="product-card__background-link" href="./product-page.html"><span class="visually-hidden">Перейти на карточку продукта.</span></a>
-                    <div class="product-card__content">
-                      <p class="product-card__title">iRU Office 310A3SM MT</p>
-                      <p class="product-card__subtitle">Компьютер для эффективной работы</p>
-                      <div class="product-card__image-wrapper">
-                        <img class="product-card__image" src="@img/product-card-image-1.jpg" alt="">
-                        <span class="product-card__vendor filter">
-                          <span class="visually-hidden">RDW Computers.</span>
-                          <img class="filter__image" src="@img/filter-vendor-rdw.png" alt="">
-                        </span>
-                      </div>
-                      <div class="product-card__price-row">
-                        <div class="product-card__prices-wrapper">
-                          <span class="product-card__price">582 940 ₽</span>
-                          <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
-                        </div>
-                        <a class="product-card__button order-button button" href="#!">Заказать</a>
-                      </div>
-                      <div class="product-card__toolbar">
-                        <button class="product-card__toolbar-button product-card__toolbar-button--compare">
-                          <svg class="product-card__toolbar-button-icon" width="24" height="19" viewBox="0 0 24 19">
-                            <use xlink:href="img/sprite.svg#compare-icon"></use>
-                          </svg>
-                          <span class="product-card__toolbar-button-text">Сравнить</span>
-                        </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
-                          <span class="product-card__toolbar-button-text">Конфигуратор</span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
+
               </ol>
               <button class="catalog__show-more show-more" type="button">
                 <svg class="show-more__icon" width="10" height="15" viewBox="0 0 10 15">
