--- a/src/views/pages/servers.j2
+++ b/src/views/pages/servers.j2
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="catalog__cards-wrapper">
-            <div class="catalog__side-filters catalog__content-column">
+            <div class="catalog__side-filters catalog__side-filters--mobile-minimized catalog__content-column">
               <form class="catalog__form form" id="catalog-filters-form" action="https://echo.htmlacademy.ru" method="post">
                 <h3 class="catalog__form-title">фильтры</h3>
                 <div class="form__group">
