--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "./vendor/swiper/swiper-bundle.scss";
 //
 @import "./blocks/visually-hidden.scss";
+@import "./blocks/bg.scss";
 @import "./blocks/container.scss";
 @import "./blocks/tabs.scss";
 @import "./blocks/button.scss";
@@ -83,3 +84,4 @@
 @import "./blocks/other-service-card.scss";
 @import "./blocks/other-services-swiper.scss";
 @import "./blocks/admin-cons.scss";
+@import "./blocks/server-conf.scss";
