--- a/src/views/pages/servers.j2
+++ b/src/views/pages/servers.j2
@@ -299,7 +299,7 @@
                           </svg>
                           <span class="product-card__toolbar-button-text">Сравнить</span>
                         </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="./configurator-servera-hpe.html">
                           <span class="product-card__toolbar-button-text">Конфигуратор</span>
                         </a>
                       </div>
@@ -332,7 +332,7 @@
                           </svg>
                           <span class="product-card__toolbar-button-text">Сравнить</span>
                         </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="./configurator-servera-hpe.html">
                           <span class="product-card__toolbar-button-text">Конфигуратор</span>
                         </a>
                       </div>
@@ -365,7 +365,7 @@
                           </svg>
                           <span class="product-card__toolbar-button-text">Сравнить</span>
                         </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="./configurator-servera-hpe.html">
                           <span class="product-card__toolbar-button-text">Конфигуратор</span>
                         </a>
                       </div>
@@ -398,7 +398,7 @@
                           </svg>
                           <span class="product-card__toolbar-button-text">Сравнить</span>
                         </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="./configurator-servera-hpe.html">
                           <span class="product-card__toolbar-button-text">Конфигуратор</span>
                         </a>
                       </div>
@@ -431,7 +431,7 @@
                           </svg>
                           <span class="product-card__toolbar-button-text">Сравнить</span>
                         </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="./configurator-servera-hpe.html">
                           <span class="product-card__toolbar-button-text">Конфигуратор</span>
                         </a>
                       </div>
@@ -464,7 +464,7 @@
                           </svg>
                           <span class="product-card__toolbar-button-text">Сравнить</span>
                         </button>
-                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="#!">
+                        <a class="product-card__toolbar-button product-card__toolbar-button--conf" href="./configurator-servera-hpe.html">
                           <span class="product-card__toolbar-button-text">Конфигуратор</span>
                         </a>
                       </div>
