--- a/src/scss/blocks/shd.scss
+++ b/src/scss/blocks/shd.scss
@@ -160,7 +160,7 @@
 }
 
 .shd__group--soft .shd__group-title::before {
-  background-image: url("@img/icons/shd-cache-icon.svg");
+  background-image: url("@img/icons/shd-soft-icon.svg");
 }
 
 .shd__group--reserve-copy .shd__group-title::before {
