--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,4 +84,5 @@
 @import "./blocks/other-service-card.scss";
 @import "./blocks/other-services-swiper.scss";
 @import "./blocks/admin-cons.scss";
+@import "./blocks/conf-group.scss";
 @import "./blocks/server-conf.scss";
